@@ -65,7 +65,7 @@ public class DaoImpl implements Dao {
                                 rs.getFloat("depth"),
                                 rs.getDouble("number_of_treasures")));
             } else {
-                throw new NotFoundException("Dragon with id=%d not found".formatted(id));
+                throw new NotFoundException(String.format("Dragon with id=%d not found", id));
             }
         } catch (SQLException e) {
             throw new DaoException("Error in database", e);
@@ -76,15 +76,15 @@ public class DaoImpl implements Dao {
     public long add(Dragon dragon) throws DaoException {
         try {
             PreparedStatement psAdd = connection.prepareStatement(
-                            "with ins1 as ("+
-                                "insert into caves(depth, number_of_treasures)"+
-                                "values (?, ?)"+
-                                "RETURNING cave_id as new_cave_id"+
-                            ")"+
-                            "insert into dragons (name, coordinate_x, coordinate_y, creation_date, creation_date_zone, age, weight, type, character, cave_id)"+
-                            "select ?, ?, ?, ?, ?, ?, ?, ?, ?, new_cave_id from ins1"+
-                            "returning dragon_id"
-                            );
+                    "with ins1 as (" +
+                            "insert into caves(depth, number_of_treasures)" +
+                            "values (?, ?)" +
+                            "RETURNING cave_id as new_cave_id" +
+                            ")" +
+                            "insert into dragons (name, coordinate_x, coordinate_y, creation_date, creation_date_zone, age, weight, type, character, cave_id)"
+                            +
+                            "select ?, ?, ?, ?, ?, ?, ?, ?, ?, new_cave_id from ins1" +
+                            "returning dragon_id");
             // cave params
             psAdd.setFloat(1, dragon.getCave().getDepth());
             psAdd.setDouble(2, dragon.getCave().getNumberOfTreasures());
@@ -112,18 +112,16 @@ public class DaoImpl implements Dao {
     public void update(long id, Dragon dragon) throws DaoException, NotFoundException {
         try {
             PreparedStatement psUpdate = connection.prepareStatement(
-                    """
-                            with upd1 as (
-                                update dragons
-                                set name=?, coordinate_x=?, coordinate_y=?,
-                                age=?, weight=?, type=?, character=?
-                                where dragon_id=?
-                                returning cave_id as cave_id
-                            )
-                            update caves
-                            set depth=?, number_of_treasures=?
-                            where cave_id in (SELECT cave_id from upd1)
-                            """);
+                    "with upd1 as (" +
+                            "update dragons" +
+                            "set name=?, coordinate_x=?, coordinate_y=?," +
+                            "age=?, weight=?, type=?, character=?" +
+                            "where dragon_id=?" +
+                            "returning cave_id as cave_id" +
+                            ")" +
+                            "update caves" +
+                            "set depth=?, number_of_treasures=?" +
+                            "where cave_id in (SELECT cave_id from upd1)");
 
             psUpdate.setString(1, dragon.getName());
             psUpdate.setFloat(2, dragon.getCoordinates().getX());
@@ -138,7 +136,7 @@ public class DaoImpl implements Dao {
 
             int changedRows = psUpdate.executeUpdate();
             if (changedRows == 0) {
-                throw new NotFoundException("Dragon with id=%d not found".formatted(id));
+                throw new NotFoundException(String.format("Dragon with id=%d not found", id));
             }
         } catch (SQLException e) {
             throw new DaoException("Error in database", e);
@@ -149,27 +147,27 @@ public class DaoImpl implements Dao {
     public Dragon delete(long id) throws DaoException, InvalidValueException, NotFoundException {
         try {
             PreparedStatement psDelete = connection.prepareStatement(
-                    """
-                            with del1 as (
-                                delete from dragons
-                                where dragon_id=?
-                                returning *
-                            )
-                            , del2 as (
-                                delete from caves
-                                where cave_id in (select cave_id from del1)
-                                returning *
-                            )
-                            select * from del1 join del2
-                            on del1.cave_id = del2.cave_id
-                            """);
+                    
+                            "with del1 as ("+
+                                "delete from dragons"+
+                                "where dragon_id=?"+
+                                "returning *"+
+                            ")"+
+                            ", del2 as ("+
+                                "delete from caves"+
+                                "where cave_id in (select cave_id from del1)"+
+                                "returning *"+
+                            ")"+
+                            "select * from del1 join del2"+
+                            "on del1.cave_id = del2.cave_id"
+                            );
 
             psDelete.setLong(1, id);
 
             ResultSet rs = psDelete.executeQuery();
 
             if (!rs.next()) {
-                throw new NotFoundException("Dragon with id=%d not found".formatted(id));
+                throw new NotFoundException(String.format("Dragon with id=%d not found",id));
             }
 
             return new Dragon(
@@ -197,10 +195,10 @@ public class DaoImpl implements Dao {
 
         try {
             PreparedStatement psGetAll = connection.prepareStatement(
-                    """
-                            select * from
-                            dragons join caves on dragons.cave_id = caves.cave_id
-                            """);
+                    
+                            "select * from"+
+                            "dragons join caves on dragons.cave_id = caves.cave_id"
+                            );
 
             ResultSet rs = psGetAll.executeQuery();
             while (rs.next()) {
